welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:7: error: '(' expected but identifier found.
{if lookingFor == nums(i) {occ = occ +1}}
    ^occurrences:7: error: illegal start of simple expression
{if lookingFor == nums(i) {occ = occ +1}}
                                        ^